[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-parser-sdk"
version = "0.0.1"
description = "Magritte Parser SDK"
dependencies = [
    "parser-api @ git+ssh://git@github.com/passimens/parser-api@installable-package",
    "magritte-python @ git+ssh://git@github.com/Assargadon/magritte-python.git"
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
