[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-parser-sdk"
version = "0.0.1"
description = "Magritte Parser SDK"
dependencies = [
    "parser-api @ git+https://github.com/passimens/parser-api@rev_0.1",
    "magritte-python @ git+https://github.com/Assargadon/magritte-python.git@rev_1.1"
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
