[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ma-parser-sdk"
version = "0.0.1"
description = "Magritte Parser SDK"
dependencies = [
    "parser-api @ git+https://github.com/passimens/parser-api@rev_0.3",
    "magritte-python @ git+https://github.com/Assargadon/magritte-python.git@6a19e31384f7e41f4cf87e7b43cb2560d4e28837"
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
